--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,8 @@
   link: /blog.html
 - name: Resource Hub
   link: /resource_hub.html
+- name: Code Documentation
+  link: https://frc3197.github.io/2020-Robot/
 - name: GitHub Code
   link: https://github.com/frc3197
 - name: Trello Board
