--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: ruby
 install: gem install jekyll
-script: jekyll build --trace
+script: bundler exec jekyll build --trace
 cache: bundler
